apps/workloads/tools/keeper/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keeper
  labels:
    app: keeper
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 80
      targetPort: web-ui
      protocol: TCP
  selector:
    app: keeper
