apps/workloads/tools/keeper/external-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keeper-external-route
spec:
  parentRefs:
    - name: external-gateway
      namespace: traefik
  hostnames:
    - "keeper.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: keeper-rate-limit
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: SAMEORIGIN
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
      backendRefs:
        - name: keeper
          port: 80
